# rs_ml_9

./: .gitignore  pyproject.toml  readme.md
.github/workflows/: python-app.yml
data/: pd_profiling.py
src/forest_cover_ml/: data.py  log_pipeline.py  pipeline.py  rf_pipeline.py  train.py  train_log.py  train_rf.py
tests/: test_train.py
