[tool.poetry]
name = "9_evaluation_selection"
version = "0.1.0"
description = ""
authors = ["Maksperskiy <maksukay@mail.ru>"]

[tool.poetry.dependencies]
python = "3.9"
mlflow = "^1.25.1"
pandas = "^1.4.2"
numpy = "^1.22.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
