[tool.poetry]
name = "9_evaluation_selection"
version = "0.1.0"
description = ""
authors = ["Maksperskiy <maksukay@mail.ru>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "~3.9"
click = "^8.1.3"
pandas = "^1.4.2"
numpy = "^1.22.3"
sklearn = "^0.0"
scikit-learn = "^1.0.1"
scipy = "^1.8.0"
mlflow = "^1.25.1"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train_log = "src.forest_cover_ml.train_log:train"
train_rf = "src.forest_cover_ml.train_rf:train"
pd_profiling = "data.pd_profiling:profile"
